vlib/v/checker/tests/generics_struct_field_fn_args_err.out
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:21:20: error: expected 0 arguments, but got 1
   19 |     }
   20 |     println(fun0.call())
   21 |     println(fun0.call(1234))
      |                       ~~~~
   22 |     println(fun0.call(1234, 5678))
   23 |
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:22:20: error: expected 0 arguments, but got 2
   20 |     println(fun0.call())
   21 |     println(fun0.call(1234))
   22 |     println(fun0.call(1234, 5678))
      |                       ~~~~~~~~~~
   23 |
   24 |     fun1 := Fun<fn (int) int>{
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:29:15: error: expected 1 arguments, but got 0
   27 |
   28 |     println(fun1.call(42))
   29 |     println(fun1.call())
      |                  ~~~~~~
   30 |     println(fun1.call(42, 43))
   31 | }
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:30:24: error: expected 1 arguments, but got 2
   28 |     println(fun1.call(42))
   29 |     println(fun1.call())
   30 |     println(fun1.call(42, 43))
      |                           ~~
   31 | }
